Closed Bug 1527851 Opened 6 years ago Closed 6 years ago

Dev edition try build with wrong profile naming on Dedicated Profiles

Categories

(Toolkit :: Startup and Profile System, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla67
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- unaffected
firefox66 --- verified
firefox67 --- unaffected

People

(Reporter: laszlo.bialis, Assigned: mossop)

References

Details

Attachments

(1 file)

Affected versions

  • Only dev edition try builds affected

Affected platforms

  • Windows

Steps to reproduce

  1. Download try build for dev edition from https://queue.taskcluster.net/v1/task/PX2wqHf5SiyZMqIdlQ0ZIw/runs/0/artifacts/public/build/target.zip
  2. On a clean environment install try build and run it
  3. Go to about:profiles and check the name of the profiles

Expected result

  • Two existing profiles should be created: Profile: default and Profile: dev-edition-default

Actual result

  • Two existing profiles are created: Profile: default and Profile: default-aurora

Additional notes

Blocks: 1474285

This is the correct name for dev-edition going forwards.

Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → INVALID

(In reply to Dave Townsend [:mossop] (he/him) from comment #1)

This is the correct name for dev-edition going forwards.

I don't recall discussing or seeing any hints towards the renaming of the dev-edition profile. Aurora is a channel long shut down, so what would be the reason for changing the dev-edition profile name?

Flags: needinfo?(dtownsend)

Sent an email to abovens and hkirschner, will reopen this if they want this switched back.

Flags: needinfo?(dtownsend)

Need to change this back.

Assignee: nobody → dtownsend
Status: RESOLVED → REOPENED
Resolution: INVALID → ---
Pushed by dtownsend@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8540d6d786fd Continue to use dev-edition-default as the default profile name for developer edition. r=froydnj
Status: REOPENED → RESOLVED
Closed: 6 years ago6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67

I verified this on Ubuntu 16.04, Windows 10 and Mac OS X 10.14 on the try build send by Dave and I can confirm the fix. I will leave a NI? for myself to verify this when will hit the DevEdition and then I will mark it as Verified Fixed.

Flags: needinfo?(ovidiu.boca)

I verified this on Mac OS X 10.14, Windows 10 and Ubuntu 16.04 with FF DevEdition 66.0b14 and I can confirm the fix.

Status: RESOLVED → VERIFIED
Flags: needinfo?(ovidiu.boca)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: