Bug 1527851: Continue to use dev-edition-default as the default profile name for developer edition. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D21452