toolkit/profile/xpcshell/test_skip_locked_environment.js
@@ -50,11 +50,15 @@ add_task(async () => {
   let { rootDir, localDir, profile, didCreate } = selectStartupProfile();
   checkStartupReason("restart-skipped-default");
 
+  // Since there is already a profile with the desired name on dev-edition, a
+  // unique version will be used.
+  let expectedName = AppConstants.MOZ_DEV_EDITION ? `${DEDICATED_NAME}-1` : DEDICATED_NAME;
+
   Assert.ok(didCreate, "Should have created a new profile.");
   Assert.ok(!rootDir.equals(root), "Should have selected the right root dir.");
   Assert.ok(!localDir.equals(local), "Should have selected the right local dir.");
   Assert.ok(profile, "A named profile was returned.");
-  Assert.equal(profile.name, DEDICATED_NAME, "The right profile name was used.");
+  Assert.equal(profile.name, expectedName, "The right profile name was used.");
 
   let service = getProfileService();
   Assert.equal(service.defaultProfile, profile, "Should be the default profile.");
@@ -62,17 +66,11 @@ add_task(async () => {
 
   profileData = readProfilesIni();
 
-  if (!AppConstants.MOZ_DEV_EDITION) {
-    // On non-dev-edition builds the first two profiles are in the opposite order.
-    [profileData.profiles[1], profileData.profiles[0]] =
-        [profileData.profiles[0], profileData.profiles[1]];
-  }
-
-  Assert.equal(profileData.profiles[0].name, DEDICATED_NAME, "Should be the right profile.");
-  Assert.ok(!profileData.profiles[0].default, "Should not be the old default profile.");
-  Assert.equal(profileData.profiles[1].name, PROFILE_DEFAULT, "Should be the right profile.");
-  Assert.ok(profileData.profiles[1].default, "Should be the old default profile.");
-  Assert.equal(profileData.profiles[1].path, root.leafName, "Should be the correct path.");
+  Assert.equal(profileData.profiles[0].name, PROFILE_DEFAULT, "Should be the right profile.");
+  Assert.ok(profileData.profiles[0].default, "Should be the old default profile.");
+  Assert.equal(profileData.profiles[0].path, root.leafName, "Should be the correct path.");
+  Assert.equal(profileData.profiles[1].name, expectedName, "Should be the right profile.");
+  Assert.ok(!profileData.profiles[1].default, "Should not be the old default profile.");
 
   let hash = xreDirProvider.getInstallHash();
   installData = readInstallsIni();
